# orquestrador-ai

./: .dockerignore  .env.example  .flake8  .gitignore  BACKLOG.md  CONFIG_SNAPSHOT.manifest.json  CONFIG_SNAPSHOT.md  Dockerfile  Makefile  README.md  backup_dockerfile  cy.yml  docker-compose.yml  pyproject.toml  render.yaml  repo_structure.txt  requirements.lock.txt  ruff.toml  teste1  teste2  teste3  teste4  teste5  teste6
.github/workflows/: ci.yml  cy.yml  snapshot.yml
app/: Observability.py  __init__.py  cache.py  config.py  gemini_client.py  judge.py  judge_demo.py  main.py  metrics.py  observability.py  openai_client.py  retry.py  test_basic.py  teste
app/Backup/: cache.py  config.py  gemini_client.py  gemini_client_2.py  judge2.py  main2.py  metrics.py  openai_client.py  openai_client_2.py  refine.py
app/resilience/: __init__.py
app/utils/: retry.py
orquestrador_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: dev.sh  e2e_check.sh  env_check.py  run_local.sh
tests/: test_ask_providers.py  test_basic.py  test_duel_no_providers.py  test_duel_openai_only.py  test_fallback.py  test_judge.py  test_metrics.py  test_metrics_error_counter.py  test_observability.py  test_openai_client.py  test_request_id.py  test_request_id_header.py
tools/: guard_update.py  snapshot_configs.py
