[project]
name = "orquestrador-ai"
version = "0.1.0"
description = "Orquestrador adaptativo (esqueleto)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.4.0",
  "redis>=5.0",
  "openai>=1.40.0",
  "google-generativeai>=0.7.0",
  "httpx>=0.27.0"
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8080
reload = true
